--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-<p> QUALQUER COISA</p> <head>
+<html> 
+<head>
+    <p> QUALQUER COISA</p>
 <meta charset="UTF-8"/>
 <title>Document</title>
 </head>
